feat(data): Add comment field to drives and partitions